[package]
name = "cennznet-executor"
version = "1.0.0"
authors = ["Centrality Developers <support@centrality.ai>"]
description = "CENNZnet node implementation in Rust."
edition = "2018"
repository = "https://github.com/cennznet/cennznet"

[dependencies]
# third-party dependencies
codec = { version = "1.2.0", package = "parity-scale-codec" }
trie-root = "0.16.0"
frame-benchmarking = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3.1" }

# internal dependencies
cennznet-primitives = { path = "../primitives" }
cennznet-runtime = { path = "../runtime" }

#frame dependencies
sp-state-machine = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3.1" }
sc-executor = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3.1" }
sp-core = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3.1" }
sp-trie = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3.1" }

[dev-dependencies]
criterion = "0.3.0"
frame-support = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3.1" }
frame-system = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3.1" }
cennznet-testing = { path = "../testing" }
pallet-contracts = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3.1" }
pallet-grandpa = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3.1" }
pallet-im-online = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3.1" }
pallet-session = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3.1" }
pallet-timestamp = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3.1" }
pallet-generic-asset = { git = "https://github.com/plugblockchain/plug-blockchain", default-features = false, branch = "1.0.0-rc3.1" }
crml-transaction-payment = { path="../crml/transaction-payment", default-features = false }
pallet-treasury = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3.1" }
sp-application-crypto = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3.1" }
sp-runtime = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3.1" }
sp-externalities = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3.1" }
substrate-test-client = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3.1" }
wabt = "0.9.2"


[features]
wasmtime = [
	"sc-executor/wasmtime",
]
wasmi-errno = [
	"sc-executor/wasmi-errno",
]
stress-test = []

[[bench]]
name = "bench"
harness = false