[package]
name = "cennznet-primitives"
version = "2.0.0"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"
repository = "https://github.com/cennznet/cennznet"

[dependencies]
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.1.0", default-features = false }
ethereum = { version = "0.12.0", default-features = false, features = [ "with-codec" ] }
frame-support = { git = "https://github.com/cennznet/substrate", rev = "254219721084b533626ffa16b74c415771d46747", default-features = false }
libsecp256k1 = { version = "0.6.0", default-features = false }
sp-api = { git = "https://github.com/cennznet/substrate", rev = "254219721084b533626ffa16b74c415771d46747", default-features = false }
sp-application-crypto = { git = "https://github.com/cennznet/substrate", rev = "254219721084b533626ffa16b74c415771d46747", default-features = false }
sp-core = { git = "https://github.com/cennznet/substrate", rev = "254219721084b533626ffa16b74c415771d46747", default-features = false }
sp-io = { git = "https://github.com/cennznet/substrate", rev = "254219721084b533626ffa16b74c415771d46747", default-features = false }
sp-runtime = { git = "https://github.com/cennznet/substrate", rev = "254219721084b533626ffa16b74c415771d46747", default-features = false }
sp-std = { git = "https://github.com/cennznet/substrate", rev = "254219721084b533626ffa16b74c415771d46747", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"ethereum/std",
	"frame-support/std",
	"libsecp256k1/std",
	"sp-api/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"scale-info/std",
]
try-runtime = ["frame-support/try-runtime"]
