[package]
name = "cennznet-primitives"
version = "2.0.0"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2021"
repository = "https://github.com/cennznet/cennznet"

[dependencies]
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
codec = { version = "3.0.0", package = "parity-scale-codec", default-features = false }
ethereum = { version = "0.11.1", default-features = false, features = [ "with-codec" ] }
libsecp256k1 = { version = "0.6.0", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"ethereum/std",
	"frame-support/std",
	"libsecp256k1/std",
	"sp-api/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"scale-info/std",
]
try-runtime = ["frame-support/try-runtime"]
