[package]
name = "cennznet-rpc"
version = "1.0.0"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"
repository = "https://github.com/cennznet/cennznet"

[dependencies]
#third-party dependencies
jsonrpc-core = "14.0.3"

#cennznet dependencies
cennznet-primitives = { path = "../primitives" }
cennznet-runtime = { path = "../runtime" }
crml-cennzx-spot-rpc = { path = "../crml/cennzx-spot/rpc" }

#frame dependencies
pallet-contracts-rpc = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
pallet-generic-asset-rpc = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
pallet-transaction-payment-rpc = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
substrate-frame-rpc-system = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }

#primitives and client dependencies
sc-client = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
sc-consensus-babe = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
sc-consensus-babe-rpc = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
sc-keystore = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
sc-consensus-epochs = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
sp-consensus-babe = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
sp-api = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
sp-runtime = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
sp-transaction-pool = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
sp-consensus = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
sp-blockchain = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }