[package]
name = "cennznet-runtime"
version = "2.0.0-rc5"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"
build = "build.rs"
repository = "https://github.com/cennznet/cennznet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
cennznet-cli = { path = "../cli", default-features = false }
sp-keyring = { git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521" }
# when running tests for the cennznet-runtime use the "integration_config" feature flag.
# This save us from cases such as 24 hour eras in staking/session tests.
# https://github.com/rust-lang/cargo/issues/2911#issuecomment-749580481
cennznet-runtime = { path = ".", features = ["integration_config"] }

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.102", optional = true, features = ["derive"] }
log = { version = "0.4.14", default-features = false }
smallvec = "1.6.1"
static_assertions = "1.1.0"

pallet-authorship = { git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521" }
pallet-authority-discovery = { git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521" }
pallet-babe = { git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521" }
pallet-grandpa = { git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521" }
pallet-identity = { git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521" }
pallet-im-online = { git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521" }
pallet-multisig = { git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521" }
pallet-offences = { git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521" }
pallet-randomness-collective-flip = { git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521" }
pallet-treasury = { git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521" }
pallet-scheduler = { git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521" }
pallet-session = { git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521", features = ["historical"] }
pallet-sudo = { git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521" }
pallet-timestamp = { git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521" }
pallet-utility = { git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521" }

frame-executive = { git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521" }
frame-support = { git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521" }
frame-system = { git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521" }
frame-try-runtime = { git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521", optional = true }

sp-api = { git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521" }
sp-authority-discovery = {  git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521"}
sp-block-builder = {  git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521"}
sp-consensus-babe = {  git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521" }
sp-core = { git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521" }
sp-inherents = {  git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521" }
sp-io = {  git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521" }
sp-offchain = { git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521" }
sp-runtime = { git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521" }
sp-runtime-interface = { git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521" }
sp-session = { git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521" }
sp-std = { git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521" }
sp-transaction-pool = { git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521" }
sp-version = { git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521" }
sp-staking = { git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521" }

futures = { version = "0.3.1", features = ["compat"] }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521" }

# Used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521", optional = true }
frame-system-benchmarking = { git = "https://github.com/cennznet/substrate", default-features = false, rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521", optional = true }
hex-literal = { version = "0.3.1", default-features = false }

cennznet-primitives = { path = "../primitives", default-features = false }
crml-attestation = { path = "../crml/attestation", default-features = false}
crml-cennzx = { path = "../crml/cennzx", default-features = false }
crml-cennzx-rpc-runtime-api = { path = "../crml/cennzx/rpc/runtime-api", default-features = false }
crml-eth-bridge = { path = "../crml/eth-bridge", default-features = false }
crml-erc20-peg = { path = "../crml/erc20-peg", default-features = false }
crml-generic-asset = { path = "../crml/generic-asset", default-features = false }
crml-generic-asset-rpc-runtime-api = { path = "../crml/generic-asset/rpc/runtime-api", default-features = false }
crml-governance = { path = "../crml/governance", default-features = false }
crml-governance-rpc-runtime-api = { path = "../crml/governance/rpc/runtime-api", default-features = false }
crml-nft = { path = "../crml/nft", default-features = false}
crml-nft-rpc-runtime-api = { path = "../crml/nft/rpc/runtime-api", default-features = false }
crml-staking = { path = "../crml/staking", default-features = false}
crml-staking-rpc-runtime-api = { path = "../crml/staking/rpc/runtime-api", default-features = false }
crml-support = { path = "../crml/support", default-features = false }
crml-sylo = { path = "../crml/sylo", default-features = false}
crml-transaction-payment = { path = "../crml/transaction-payment", default-features = false}
crml-transaction-payment-rpc-runtime-api = { path = "../crml/transaction-payment/rpc/runtime-api", default-features = false}

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/cennznet/substrate", rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-try-runtime/std",
	"pallet-authorship/std",
	"pallet-authority-discovery/std",
	"pallet-babe/std",
	"pallet-grandpa/std",
	"pallet-identity/std",
	"pallet-im-online/std",
	"pallet-multisig/std",
	"pallet-offences/std",
	"pallet-randomness-collective-flip/std",
	"pallet-scheduler/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-treasury/std",
	"pallet-utility/std",
	"serde",
	"sp-api/std",
	"sp-authority-discovery/std",
	"sp-block-builder/std",
	"sp-consensus-babe/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-runtime-interface/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"cennznet-primitives/std",
	"crml-attestation/std",
	"crml-cennzx/std",
	"crml-cennzx-rpc-runtime-api/std",
	"crml-erc20-peg/std",
	"crml-eth-bridge/std",
	"crml-generic-asset/std",
	"crml-generic-asset-rpc-runtime-api/std",
	"crml-governance/std",
	"crml-governance-rpc-runtime-api/std",
	"crml-nft/std",
	"crml-nft-rpc-runtime-api/std",
	"crml-staking/std",
	"crml-staking-rpc-runtime-api/std",
	"crml-support/std",
	"crml-sylo/std",
	"crml-transaction-payment/std",
	"crml-transaction-payment-rpc-runtime-api/std",
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-try-runtime",
	"frame-system/try-runtime",
	"pallet-authority-discovery/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-randomness-collective-flip/try-runtime",
	"pallet-session/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-utility/try-runtime",
	"cennznet-primitives/try-runtime",
	"crml-cennzx/try-runtime",
	"crml-staking/try-runtime",
	"crml-sylo/try-runtime",
	"crml-transaction-payment/try-runtime",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-system-benchmarking",
	"sp-runtime/runtime-benchmarks",
	"crml-cennzx/runtime-benchmarks",
	"crml-nft/runtime-benchmarks",
	"crml-staking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
]
integration_config = []
test-doughnut = []
